// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tooltip > renders with custom arrow and content className 1`] = `
<div
  class="sqi-popup sqi-tooltip sqi-tooltip-default sqi-popup-transition sqi-popup-transition-entered"
  role="tooltip"
>
  <div
    style="position: fixed; top: 0px; left: 0px; bottom: auto; right: auto; margin: 0px; will-change: top,left; z-index: 1;"
  >
    <div
      class="sqi-popup-arrow custom-arrow sqi-tooltip-arrow"
    />
  </div>
  <div
    class="sqi-popup-content custom-content sqi-tooltip-content"
  >
    This is a tooltip
  </div>
</div>
`;

exports[`Tooltip > renders with different themes 1`] = `
<div
  class="sqi-popup sqi-tooltip sqi-tooltip-default sqi-popup-transition sqi-popup-transition-entered"
  role="tooltip"
>
  <div
    style="position: fixed; top: 0px; left: 0px; bottom: auto; right: auto; margin: 0px; will-change: top,left; z-index: 1;"
  >
    <div
      class="sqi-popup-arrow sqi-tooltip-arrow"
    />
  </div>
  <div
    class="sqi-popup-content sqi-tooltip-content"
  >
    This is a tooltip
  </div>
</div>
`;

exports[`Tooltip > renders with different themes 2`] = `
<div
  class="sqi-popup sqi-tooltip sqi-tooltip-primary sqi-popup-transition sqi-popup-transition-entered"
  role="tooltip"
>
  <div
    style="position: fixed; top: 0px; left: 0px; bottom: auto; right: auto; margin: 0px; will-change: top,left; z-index: 1;"
  >
    <div
      class="sqi-popup-arrow sqi-tooltip-arrow"
    />
  </div>
  <div
    class="sqi-popup-content sqi-tooltip-content"
  >
    This is a tooltip
  </div>
</div>
`;

exports[`Tooltip > renders with different themes 3`] = `
<div
  class="sqi-popup sqi-tooltip sqi-tooltip-success sqi-popup-transition sqi-popup-transition-entered"
  role="tooltip"
>
  <div
    style="position: fixed; top: 0px; left: 0px; bottom: auto; right: auto; margin: 0px; will-change: top,left; z-index: 1;"
  >
    <div
      class="sqi-popup-arrow sqi-tooltip-arrow"
    />
  </div>
  <div
    class="sqi-popup-content sqi-tooltip-content"
  >
    This is a tooltip
  </div>
</div>
`;

exports[`Tooltip > renders with different themes 4`] = `
<div
  class="sqi-popup sqi-tooltip sqi-tooltip-danger sqi-popup-transition sqi-popup-transition-entered"
  role="tooltip"
>
  <div
    style="position: fixed; top: 0px; left: 0px; bottom: auto; right: auto; margin: 0px; will-change: top,left; z-index: 1;"
  >
    <div
      class="sqi-popup-arrow sqi-tooltip-arrow"
    />
  </div>
  <div
    class="sqi-popup-content sqi-tooltip-content"
  >
    This is a tooltip
  </div>
</div>
`;

exports[`Tooltip > renders with different themes 5`] = `
<div
  class="sqi-popup sqi-tooltip sqi-tooltip-warning sqi-popup-transition sqi-popup-transition-entered"
  role="tooltip"
>
  <div
    style="position: fixed; top: 0px; left: 0px; bottom: auto; right: auto; margin: 0px; will-change: top,left; z-index: 1;"
  >
    <div
      class="sqi-popup-arrow sqi-tooltip-arrow"
    />
  </div>
  <div
    class="sqi-popup-content sqi-tooltip-content"
  >
    This is a tooltip
  </div>
</div>
`;

exports[`Tooltip > renders with different themes 6`] = `
<div
  class="sqi-popup sqi-tooltip sqi-tooltip-light sqi-popup-transition sqi-popup-transition-entered"
  role="tooltip"
>
  <div
    style="position: fixed; top: 0px; left: 0px; bottom: auto; right: auto; margin: 0px; will-change: top,left; z-index: 1;"
  >
    <div
      class="sqi-popup-arrow sqi-tooltip-arrow"
    />
  </div>
  <div
    class="sqi-popup-content sqi-tooltip-content"
  >
    This is a tooltip
  </div>
</div>
`;
